--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 /* ---------- Base ---------- */
 @import url("https://fonts.googleapis.com/css2?family=Inter:wght@400;800&display=swap");
-*{box-sizing:border-box}
+/* *{} */
 body{
   margin:0;
   font-family:Arial,Helvetica,sans-serif;
@@ -31,11 +31,14 @@ h1{
 
 /* ---------- Leaderboard wrapper ---------- */
 .scoreboard{
-  display:flex;           /* vertical stack of teams */
-  flex-direction:row;
-  flex-wrap: wrap;
+  /* display:flex;           /* vertical stack of teams */
+  /* flex-direction:row; */
+  /* flex-wrap: wrap; */ 
+    display: grid;
+    grid-template-rows: repeat(2, 1fr);
+    grid-template-columns: repeat(4, 1fr);
   gap:12px;
-  max-width:1500px;       /* keeps things centred on large screens */
+  max-width:1720px;       /* keeps things centred on large screens */
   margin:40px auto;
 }
 
@@ -64,8 +67,8 @@ h1{
     backdrop-filter: blur(1px);
     border-radius: 10px;
     padding: 10px 16px;
-    width: 24%;
-    height: 400px;
+    width: 100%;
+    height: 470px;
     box-shadow: 0 2px 6px rgba(0, 0, 0, 0.1);
 }
   
@@ -94,6 +97,8 @@ h1{
   
   /* SCORE stays fixed and aligned */
   .score {
+    position: absolute;
+    top: 220px;
     font-size: 55px;
     font-weight: bold;
     margin: 12px auto;
@@ -116,25 +121,28 @@ h1{
 
   /* BUTTONS wrap right side */
   .buttons {
+    position: absolute;
+    top: 310px;
     display: flex;
     flex-wrap: wrap;
     gap: 6px;
     /* justify-content: flex-start; */
     justify-content: space-between;
     margin: 31px;
+    margin-top: 55px;
   }
 
 .buttons button{
   padding:9px 12px;
   font-size:14px;
-  border:2px solid #f4f005;
+  border:2px solid #f4f00540;
   border-radius:40px;
   /* background:#0077cc; */
   background: transparent;
   color:#fff;
   cursor:pointer;
 }
-.buttons button:hover{background:#f4f005;color:#000000}
+.buttons button:hover{background:#f4f005b1;color:#000000}
 
 
 :root {
@@ -400,12 +408,17 @@ body {
 
 
 .custom-score-input {
-  width: 77px;
+  width: 185px;
   margin-top: 0px;
   margin-right: 4px;
   padding: 9px;
   font-size: 13px;
   border: 1px solid #aaa;
   border-radius: 20px;
+  background: #1eb9f11a;
 }
 
+::placeholder {
+  color: rgb(255, 255, 255);
+  opacity: 1; /* Firefox */
+}
