--- a/style.css
+++ b/style.css
@@ -16,7 +16,7 @@ body{
   min-height: 100%;
   z-index: -1;
   object-fit: cover;
-  opacity: 1; /* optional: dim video for readability */
+  opacity: 0.9; /* optional: dim video for readability */
 }
 
 h1{
@@ -36,7 +36,7 @@ h1{
   /* flex-wrap: wrap; */ 
     display: grid;
     grid-template-rows: repeat(2, 1fr);
-    grid-template-columns: repeat(4, 1fr);
+    grid-template-columns: repeat(3, 1fr);
   gap:12px;
   max-width:1720px;       /* keeps things centred on large screens */
   margin:40px auto;
@@ -63,10 +63,10 @@ h1{
     display: flex;
     flex-flow: column;
     align-items: center;
-    background: rgba(255, 255, 255, 0.2);
+    background: rgb(0 0 0 / 82%);
     backdrop-filter: blur(1px);
     border-radius: 10px;
-    padding: 10px 16px;
+    padding: 25px 16px;
     width: 100%;
     height: 470px;
     box-shadow: 0 2px 6px rgba(0, 0, 0, 0.1);
@@ -134,7 +134,7 @@ h1{
 
 .buttons button{
   padding:9px 12px;
-  font-size:14px;
+  font-size:18px;
   border:2px solid #f4f00540;
   border-radius:40px;
   /* background:#0077cc; */
@@ -367,14 +367,14 @@ body {
 
 .left-logo {
   left: 150px;
-  top: 83px;
-  scale: 2.5;
+  top: 40px;
+  scale: 2;
   
 }
 
 .right-logo {
   right: 150px;
-  top: 73px;
+  top: 50px;
   scale: 1.3;
   
 }
@@ -408,7 +408,7 @@ body {
 
 
 .custom-score-input {
-  width: 185px;
+  width: 430px;
   margin-top: 0px;
   margin-right: 4px;
   padding: 9px;
@@ -416,6 +416,7 @@ body {
   border: 1px solid #aaa;
   border-radius: 20px;
   background: #1eb9f11a;
+  color: #f0f4f8;
 }
 
 ::placeholder {
